--- a/trunk/.classpath
+++ b/trunk/.classpath
@@ -8,6 +8,7 @@
 	<classpathentry kind="src" output="BusinessLogic/target/test-classes" path="BusinessLogic/src/test/java"/>
 	<classpathentry kind="src" output="PresFramework/target/classes" path="PresFramework/src/main/java"/>
 	<classpathentry kind="src" output="PresFramework/target/classes" path="PresFramework/target/generated-sources/castor"/>
+	<classpathentry excluding="**" kind="src" output="PresFramework/target/classes" path="PresFramework/src/main/resources"/>
 	<classpathentry kind="src" output="PresFramework/target/test-classes" path="PresFramework/src/test/java"/>
 	<classpathentry kind="src" output="TagLib/target/classes" path="TagLib/src/main/java"/>
 	<classpathentry excluding="**" kind="src" output="TagLib/target/classes" path="TagLib/src/main/resources"/>
@@ -21,10 +22,6 @@
 	<classpathentry excluding="**" kind="src" output="Ext/target/classes" path="Ext/src/main/resources"/>
 	<classpathentry kind="src" output="Ext/target/test-classes" path="Ext/src/test/java"/>
 	<classpathentry excluding="**" kind="src" output="Ext/target/test-classes" path="Ext/src/test/resources"/>
-	<classpathentry kind="src" output="web/target/classes" path="web/src/main/java"/>
-	<classpathentry excluding="**" kind="src" output="web/target/classes" path="web/src/main/resources"/>
-	<classpathentry kind="src" output="web/target/test-classes" path="web/src/test/java"/>
-	<classpathentry excluding="**" kind="src" output="web/target/test-classes" path="web/src/test/resources"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="con" path="org.maven.ide.eclipse.MAVEN2_CLASSPATH_CONTAINER"/>
