--- a/trunk/Social/src/main/resources/log4j.properties
+++ b/trunk/Social/src/main/resources/log4j.properties
@@ -5,4 +5,4 @@ log4j.appender.stdout.layout= org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern= %d %p [%t-%c{1}] - <%m>%n
 log4j.appender.stdout.Encoding=UTF-8
 
-log4j.logger.org.toobsframework= DEBUG
+log4j.logger.org.toobsframework= TRACE
