--- a/trunk/Social/src/main/resources/log4j.properties
+++ b/trunk/Social/src/main/resources/log4j.properties
@@ -2,7 +2,7 @@ log4j.rootLogger= INFO, stdout
 
 log4j.appender.stdout= org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout= org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern= %d %p [%t-%c{1}] - <%m>%n
+log4j.appender.stdout.layout.ConversionPattern= %d %p [%t][%c{1}] - <%m>%n
 log4j.appender.stdout.Encoding=UTF-8
 
 log4j.logger.org.toobsframework= TRACE
